--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="urgency-content">
                 <p class="urgency-text">⚡ <strong>ATENÇÃO:</strong> Condições especiais por tempo limitado!</p>
-                <p class="urgency-text">🏠 Garante já sua pré-aprovação e saia na frente na busca pelo imóvel ideal</p>
+                <p class="urgency-text">🏠 Garanta já sua pré-aprovação e saia na frente na busca pelo imóvel ideal</p>
             </div>
         </div>
     </section>
