--- a/index.html
+++ b/index.html
@@ -100,15 +100,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="entrada" class="form-label">Valor Disponível para Entrada</label>
-                        <select id="entrada" name="entrada" class="form-control">
-                            <option value="">Selecione (opcional)</option>
-                            <option value="Não tenho">Não tenho</option>
-                            <option value="Até R$ 10.000">Até R$ 10.000</option>
-                            <option value="R$ 10.000 a R$ 30.000">R$ 10.000 a R$ 30.000</option>
-                            <option value="R$ 30.000 a R$ 50.000">R$ 30.000 a R$ 50.000</option>
-                            <option value="Acima de R$ 50.000">Acima de R$ 50.000</option>
-                        </select>
+                        <label for="entrada" class="form-label">Valor Disponível para Entrada *</label>
+                        <input type="text" id="entrada" name="entrada" class="form-control currency-input" placeholder="Ex: 15000.00" required>
                         <span class="error-message" id="entradaError"></span>
                     </div>
 
@@ -129,25 +122,25 @@
     <!-- Social Proof Section -->
     <section class="social-proof">
         <div class="container">
-            <h2 class="section-title">Mais de 5.000 famílias já realizaram o sonho da casa própria!</h2>
+            <h2 class="section-title">Mais de 100 famílias já realizaram o sonho da casa própria!</h2>
             
             <div class="testimonials">
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Consegui financiar minha casa em apenas 20 dias. Processo muito rápido e transparente!"</p>
-                    <p class="testimonial-author">- Ana Carolina, São Paulo</p>
+                    <p class="testimonial-text">"Consegui meu apartamento dos sonhos na Vila Madalena! O processo foi rápido e sem complicações."</p>
+                    <p class="testimonial-author">- Maria Santos, Vila Madalena - São Paulo</p>
                 </div>
                 
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Usei todo meu FGTS como entrada e ainda consegui condições especiais. Recomendo!"</p>
-                    <p class="testimonial-author">- Roberto Silva, Rio de Janeiro</p>
+                    <p class="testimonial-text">"Finalmente realizei o sonho do apartamento próprio em Moema. Recomendo o atendimento!"</p>
+                    <p class="testimonial-author">- João Silva, Moema - São Paulo</p>
                 </div>
 
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Atendimento excelente e especializado. Me ajudaram em todo o processo."</p>
-                    <p class="testimonial-author">- Mariana Costa, Belo Horizonte</p>
+                    <p class="testimonial-text">"Apartamento no Tatuapé conquistado! Toda família está feliz com o novo apartamento."</p>
+                    <p class="testimonial-author">- Ana Oliveira, Tatuapé - São Paulo</p>
                 </div>
             </div>
         </div>
