--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <option value="Autônomo">Autônomo</option>
                             <option value="Aposentado">Aposentado</option>
                             <option value="Servidor Público">Servidor Público</option>
+                            <option value="Empresário">Empresário</option>
                         </select>
                         <span class="error-message" id="tipo_rendaError"></span>
                     </div>
@@ -122,25 +123,25 @@
     <!-- Social Proof Section -->
     <section class="social-proof">
         <div class="container">
-            <h2 class="section-title">Mais de 100 famílias já realizaram o sonho da casa própria!</h2>
+            <h2 class="section-title">100 famílias atendidas já realizaram o sonho do apartamento próprio!</h2>
             
             <div class="testimonials">
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Consegui meu apartamento dos sonhos na Vila Madalena! O processo foi rápido e sem complicações."</p>
-                    <p class="testimonial-author">- Maria Santos, Vila Madalena - São Paulo</p>
+                    <p class="testimonial-text">"Consegui meu apartamento dos sonhos no Brás! O processo foi rápido e sem complicações."</p>
+                    <p class="testimonial-author">- Maria Santos, Brás, São Paulo</p>
                 </div>
                 
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Finalmente realizei o sonho do apartamento próprio em Moema. Recomendo o atendimento!"</p>
-                    <p class="testimonial-author">- João Silva, Moema - São Paulo</p>
+                    <p class="testimonial-text">"Finalmente realizei o sonho do apartamento próprio em Itaquera. Recomendo o atendimento!"</p>
+                    <p class="testimonial-author">- João Silva, Itaquera, São Paulo</p>
                 </div>
 
                 <div class="testimonial">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p class="testimonial-text">"Apartamento no Tatuapé conquistado! Toda família está feliz com o novo apartamento."</p>
-                    <p class="testimonial-author">- Ana Oliveira, Tatuapé - São Paulo</p>
+                    <p class="testimonial-text">"Apartamento no Jaguaré conquistado! Toda família está feliz com a nova casa."</p>
+                    <p class="testimonial-author">- Ana Oliveira, Jaguaré, São Paulo</p>
                 </div>
             </div>
         </div>
@@ -151,7 +152,7 @@
         <div class="container">
             <div class="urgency-content">
                 <p class="urgency-text">⚡ <strong>ATENÇÃO:</strong> Condições especiais por tempo limitado!</p>
-                <p class="urgency-text">🏠 Garanta já sua pré-aprovação e saia na frente na busca pelo imóvel ideal</p>
+                <p class="urgency-text">🏠 Garanta já seu apartamento com as melhores condições do mercado!</p>
             </div>
         </div>
     </section>
