--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Realize o sonho da casa própria com o programa Minha Casa Minha Vida. Análise 100% online e sem compromisso.">
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17174848892">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17174848892');
+</script>
 <body>
     <!-- Header Section -->
     <section class="header-section">
