--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Minha Casa Minha Vida - Análise de Crédito Gratuita</title>
     <meta name="description" content="Realize o sonho da casa própria com o programa Minha Casa Minha Vida. Análise 100% online e sem compromisso.">
     <link rel="stylesheet" href="style.css">
-</head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17174848892">
 </script>
@@ -15,7 +14,8 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17174848892');
+  gtag('config', 'AW-17174848892');</head>
+
 </script>
 <body>
     <!-- Header Section -->
